--- a/projeto-02-analise-titanic.ipynb
+++ b/projeto-02-analise-titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -30,17 +30,17 @@
     }
    ],
    "source": [
-    "#Importanto o pandas e lendo o arquivo .csv\n",
+    "# Importanto o pandas e lendo o arquivo .csv\n",
     "import pandas as pd\n",
     "ds_titanic = pd.read_csv('titanic-data-6.csv')\n",
     "\n",
-    "#Verificando o estado dos dados e as colunas disponíveis no dataset\n",
+    "# Verificando o estado dos dados e as colunas disponíveis no dataset\n",
     "ds_titanic.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -271,19 +271,19 @@
        "9      0            237736  30.0708   NaN        C  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Explorando uma primeira fatia dos dados contidos no dataset\n",
+    "# Explorando uma primeira fatia dos dados contidos no dataset\n",
     "ds_titanic.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -311,17 +311,28 @@
     }
    ],
    "source": [
-    "#Usando a média para completar a coluna de idade (Age)\n",
+    "# Usando a média para completar a coluna de idade (Age)\n",
     "mean_age = ds_titanic['Age'].mean()\n",
     "ds_titanic['Age'].fillna(mean_age, inplace=True)\n",
     "\n",
-    "#Verificando se a modificação funcionou\n",
+    "# Verificando se a modificação funcionou\n",
     "ds_titanic.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apagando as colunas \"Cabin\", \"Embarked\" e \"Ticket\", já que elas não são interessantes para nossa análise\n",
+    "ds_titanic.drop(['Cabin', 'Embarked', 'Ticket'], axis=1, inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +341,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 12 columns):\n",
+      "Data columns (total 9 columns):\n",
       "PassengerId    891 non-null int64\n",
       "Survived       891 non-null int64\n",
       "Pclass         891 non-null int64\n",
@@ -339,16 +350,301 @@
       "Age            891 non-null float64\n",
       "SibSp          891 non-null int64\n",
       "Parch          891 non-null int64\n",
-      "Ticket         891 non-null object\n",
       "Fare           891 non-null float64\n",
-      "Cabin          204 non-null object\n",
-      "Embarked       889 non-null object\n",
-      "dtypes: float64(2), int64(5), object(5)\n",
-      "memory usage: 83.6+ KB\n"
+      "dtypes: float64(2), int64(5), object(2)\n",
+      "memory usage: 62.7+ KB\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Verificando, novamente, o estado dos dados e as colunas disponíveis no dataset\n",
+    "ds_titanic.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Pclass  \\\n",
+       "0            1         0       3   \n",
+       "1            2         1       1   \n",
+       "2            3         1       3   \n",
+       "3            4         1       1   \n",
+       "4            5         0       3   \n",
+       "\n",
+       "                                                Name     Sex   Age  SibSp  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+       "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+       "\n",
+       "   Parch     Fare  \n",
+       "0      0   7.2500  \n",
+       "1      0  71.2833  \n",
+       "2      0   7.9250  \n",
+       "3      0  53.1000  \n",
+       "4      0   8.0500  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificando, novamente, o estado dos dados e as colunas disponíveis no dataset\n",
+    "ds_titanic.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Renomeando o nome das colunas para dar maior clareza na hora da análise\n",
+    "\n",
+    "ds_titanic.rename(index=str, \n",
+    "                  columns={\"Pclass\": \"Ticket Class\", \n",
+    "                           \"SibSp\": \"# of siblings/spouses\", \n",
+    "                           \"Parch\": \"# of parent/children\"}, \n",
+    "                  inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Ticket Class</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th># of siblings/spouses</th>\n",
+       "      <th># of parent/children</th>\n",
+       "      <th>Fare</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Braund, Mr. Owen Harris</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Cumings, Mrs. John Bradley (Florence Briggs Th...</td>\n",
+       "      <td>female</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Heikkinen, Miss. Laina</td>\n",
+       "      <td>female</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Futrelle, Mrs. Jacques Heath (Lily May Peel)</td>\n",
+       "      <td>female</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Allen, Mr. William Henry</td>\n",
+       "      <td>male</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   PassengerId  Survived  Ticket Class  \\\n",
+       "0            1         0             3   \n",
+       "1            2         1             1   \n",
+       "2            3         1             3   \n",
+       "3            4         1             1   \n",
+       "4            5         0             3   \n",
+       "\n",
+       "                                                Name     Sex   Age  \\\n",
+       "0                            Braund, Mr. Owen Harris    male  22.0   \n",
+       "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0   \n",
+       "2                             Heikkinen, Miss. Laina  female  26.0   \n",
+       "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0   \n",
+       "4                           Allen, Mr. William Henry    male  35.0   \n",
+       "\n",
+       "   # of siblings/spouses  # of parent/children     Fare  \n",
+       "0                      1                     0   7.2500  \n",
+       "1                      1                     0  71.2833  \n",
+       "2                      0                     0   7.9250  \n",
+       "3                      1                     0  53.1000  \n",
+       "4                      0                     0   8.0500  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verificando, novamente, o estado dos dados e as colunas disponíveis no dataset\n",
+    "ds_titanic.head()"
+   ]
   },
   {
    "cell_type": "code",
